--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vivliostyle-mermaidjs-2024",
+  "type": "module",
   "description": "vivliostyle-mermaidjs-2024",
   "version": "0.0.0",
   "author": "Takuya \"Mura-Mi\" Murakami <mura.mi.nantoka@gmail.com>",
@@ -8,7 +9,10 @@
     "preview": "vivliostyle preview"
   },
   "dependencies": {
-    "@vivliostyle/cli": "latest"
+    "@vivliostyle/cli": "8.16.1",
+    "@vivliostyle/vfm": "2.2.1",
+    "playwright": "^1.48.2",
+    "rehype-mermaid": "^3.0.0"
   },
   "license": "CC-BY-3.0",
   "private": true
